--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,7 +54,6 @@ jobs:
   # Export job
   export:
     runs-on: ubuntu-latest
-    steps: 
+    steps:  
       - name: Export API Key
-        run: |
-          bash ./.github/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
+        run: bash ./.github/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
