--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -55,7 +55,10 @@ jobs:
   export:
     runs-on: ubuntu-latest
     steps:  
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Export API Key
         shell: bash
         run: |
-          https://raw.githubusercontent.com/dungeonsanddorks/dungeonsanddorks.github.io/main/temp/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
+          ./.github/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
