--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,6 +28,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Export API Key
+        run: |
+          git update-index --chmod=+x ./.github/setEnvironment.sh
+          bash ./.github/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
@@ -50,15 +54,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
 
-        
-  # Export job
-  export:
-    runs-on: ubuntu-latest
-    steps:  
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Export API Key
-        shell: bash
-        run: |
-          ./.github/setEnvironment.sh ${{ secrets.FIREBASECONFIG }}
+      
