Testing SEO Verification

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,6 +43,12 @@ jobs:
         with:
           source: ./
           destination: ./_site
+      
+      - name: Inject Google Site Verification Meta Tag
+        run: |
+          META_TAG='<meta name="google-site-verification" content="${{ secrets.SITECONFIG }}" />'
+          find ./_site -name "*.html" -exec sudo sed -i "s|</head>|$META_TAG\n</head>|g" {} +
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
